editing EDA.ipynb

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -196,98 +196,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1;31mSignature:\u001b[0m \u001b[0mfig\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfontdict\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mDocstring:\u001b[0m\n",
-      "Add text to figure.\n",
-      "\n",
-      "Parameters\n",
-      "----------\n",
-      "x, y : float\n",
-      "    The position to place the text. By default, this is in figure\n",
-      "    coordinates, floats in [0, 1]. The coordinate system can be changed\n",
-      "    using the *transform* keyword.\n",
-      "\n",
-      "s : str\n",
-      "    The text string.\n",
-      "\n",
-      "fontdict : dict, optional\n",
-      "    A dictionary to override the default text properties. If not given,\n",
-      "    the defaults are determined by :rc:`font.*`. Properties passed as\n",
-      "    *kwargs* override the corresponding ones given in *fontdict*.\n",
-      "\n",
-      "Returns\n",
-      "-------\n",
-      "`~.text.Text`\n",
-      "\n",
-      "Other Parameters\n",
-      "----------------\n",
-      "**kwargs : `~matplotlib.text.Text` properties\n",
-      "    Other miscellaneous text parameters.\n",
-      "\n",
-      "    Properties:\n",
-      "    agg_filter: a filter function, which takes a (m, n, 3) float array and a dpi value, and returns a (m, n, 3) array\n",
-      "    alpha: scalar or None\n",
-      "    animated: bool\n",
-      "    backgroundcolor: color\n",
-      "    bbox: dict with properties for `.patches.FancyBboxPatch`\n",
-      "    clip_box: unknown\n",
-      "    clip_on: unknown\n",
-      "    clip_path: unknown\n",
-      "    color or c: color\n",
-      "    figure: `.Figure`\n",
-      "    fontfamily or family: {FONTNAME, 'serif', 'sans-serif', 'cursive', 'fantasy', 'monospace'}\n",
-      "    fontproperties or font or font_properties: `.font_manager.FontProperties` or `str` or `pathlib.Path`\n",
-      "    fontsize or size: float or {'xx-small', 'x-small', 'small', 'medium', 'large', 'x-large', 'xx-large'}\n",
-      "    fontstretch or stretch: {a numeric value in range 0-1000, 'ultra-condensed', 'extra-condensed', 'condensed', 'semi-condensed', 'normal', 'semi-expanded', 'expanded', 'extra-expanded', 'ultra-expanded'}\n",
-      "    fontstyle or style: {'normal', 'italic', 'oblique'}\n",
-      "    fontvariant or variant: {'normal', 'small-caps'}\n",
-      "    fontweight or weight: {a numeric value in range 0-1000, 'ultralight', 'light', 'normal', 'regular', 'book', 'medium', 'roman', 'semibold', 'demibold', 'demi', 'bold', 'heavy', 'extra bold', 'black'}\n",
-      "    gid: str\n",
-      "    horizontalalignment or ha: {'center', 'right', 'left'}\n",
-      "    in_layout: bool\n",
-      "    label: object\n",
-      "    linespacing: float (multiple of font size)\n",
-      "    math_fontfamily: str\n",
-      "    multialignment or ma: {'left', 'right', 'center'}\n",
-      "    parse_math: bool\n",
-      "    path_effects: `.AbstractPathEffect`\n",
-      "    picker: None or bool or float or callable\n",
-      "    position: (float, float)\n",
-      "    rasterized: bool\n",
-      "    rotation: float or {'vertical', 'horizontal'}\n",
-      "    rotation_mode: {None, 'default', 'anchor'}\n",
-      "    sketch_params: (scale: float, length: float, randomness: float)\n",
-      "    snap: bool or None\n",
-      "    text: object\n",
-      "    transform: `.Transform`\n",
-      "    transform_rotates_text: bool\n",
-      "    url: str\n",
-      "    usetex: bool or None\n",
-      "    verticalalignment or va: {'center', 'top', 'bottom', 'baseline', 'center_baseline'}\n",
-      "    visible: bool\n",
-      "    wrap: bool\n",
-      "    x: float\n",
-      "    y: float\n",
-      "    zorder: float\n",
-      "\n",
-      "See Also\n",
-      "--------\n",
-      ".Axes.text\n",
-      ".pyplot.text\n",
-      "\u001b[1;31mFile:\u001b[0m      c:\\users\\chath\\anaconda3\\lib\\site-packages\\matplotlib\\figure.py\n",
-      "\u001b[1;31mType:\u001b[0m      method\n"
+      "module://matplotlib_inline.backend_inline\n"
      ]
     }
    ],
    "source": [
-    "fig.text?"
+    "import matplotlib\n",
+    "print(matplotlib.get_backend())"
    ]
   },
   {
